[gd_scene load_steps=12 format=3 uid="uid://edfgjm51kro0"]

[ext_resource type="PackedScene" uid="uid://bvuuauf6lspq" path="res://scenes/player.tscn" id="1_4oas2"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_30cct"]
[ext_resource type="PackedScene" uid="uid://cdceenk7y6g5e" path="res://scenes/enemy.tscn" id="2_361ad"]
[ext_resource type="Theme" uid="uid://b4neqo4peigpq" path="res://UI/ui_theme.tres" id="4_rub6s"]
[ext_resource type="PackedScene" uid="uid://ct6awv5ifrtq" path="res://scenes/garbage_collector.tscn" id="5_f25a6"]
[ext_resource type="PackedScene" uid="uid://b3jp0fgxhb2ix" path="res://scenes/player_wall_collision.tscn" id="6_2p6qj"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_erpob"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_107l1"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_4vpgk"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fgntv"]
normal = Vector2(-1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01e36"]
size = Vector2(20, 434)

[node name="GameRoot" type="Node"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_30cct")

[node name="SpawnTime" type="Timer" parent="GameManager"]
wait_time = 2.0
autostart = true

[node name="Label" type="Label" parent="GameManager"]
offset_right = 40.0
offset_bottom = 23.0

[node name="SpawnPositions" type="Node" parent="."]

[node name="LeftMargin" type="Marker2D" parent="SpawnPositions"]
position = Vector2(-72, -336)

[node name="RightMargin" type="Marker2D" parent="SpawnPositions"]
position = Vector2(72, -336)

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
zoom = Vector2(4, 4)
limit_bottom = 24
editor_draw_limits = true

[node name="Player" parent="." instance=ExtResource("1_4oas2")]

[node name="Enemies" type="Node" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource("2_361ad")]
position = Vector2(57, -273)

[node name="Enemy2" parent="Enemies" instance=ExtResource("2_361ad")]
position = Vector2(1, -118)

[node name="Enemy3" parent="Enemies" instance=ExtResource("2_361ad")]
position = Vector2(0, -245)

[node name="Enemy4" parent="Enemies" instance=ExtResource("2_361ad")]
position = Vector2(-56, -270)

[node name="Enemy5" parent="Enemies" instance=ExtResource("2_361ad")]
position = Vector2(0, -182)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -124.0
offset_right = 170.0
grow_vertical = 0
theme = ExtResource("4_rub6s")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="AR16x9" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "16 x 9"

[node name="AR19_5x9" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "19.5 x 9"

[node name="AR20x9" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "20 x 9"

[node name="LowRes" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "lower resolution"

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer2"]
layout_mode = 2

[node name="DirectTouch" type="Button" parent="CanvasLayer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_rub6s")
text = "Direct Touch targetting"

[node name="OffsetTouch" type="Button" parent="CanvasLayer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_rub6s")
text = "Offset Touch targetting"

[node name="OffsetScale" type="HSlider" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_left = 312.0
offset_top = 88.0
offset_right = -144.0
offset_bottom = 104.0
grow_horizontal = 2
scale = Vector2(2, 2)
min_value = 1.0
max_value = 2.0
step = 0.01
value = 1.5

[node name="WorldBoundary" type="Node" parent="."]

[node name="GarbageCollectorBottom" parent="WorldBoundary" instance=ExtResource("5_f25a6")]
position = Vector2(0, 400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundary/GarbageCollectorBottom"]
shape = SubResource("WorldBoundaryShape2D_erpob")

[node name="GarbageCollectorTop" parent="WorldBoundary" instance=ExtResource("5_f25a6")]
position = Vector2(0, -600)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundary/GarbageCollectorTop"]
shape = SubResource("WorldBoundaryShape2D_107l1")

[node name="GarbageCollectorLeft" parent="WorldBoundary" instance=ExtResource("5_f25a6")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundary/GarbageCollectorLeft"]
position = Vector2(-300, 0)
shape = SubResource("WorldBoundaryShape2D_4vpgk")

[node name="GarbageCollectorRight" parent="WorldBoundary" instance=ExtResource("5_f25a6")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBoundary/GarbageCollectorRight"]
position = Vector2(300, 0)
shape = SubResource("WorldBoundaryShape2D_fgntv")

[node name="PlayerBoundary" type="Node" parent="."]

[node name="PlayerWallCollisionLeft" parent="PlayerBoundary" instance=ExtResource("6_2p6qj")]
position = Vector2(-82, -110)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBoundary/PlayerWallCollisionLeft"]
shape = SubResource("RectangleShape2D_01e36")

[node name="PlayerWallCollisionRight" parent="PlayerBoundary" instance=ExtResource("6_2p6qj")]
position = Vector2(82, -110)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBoundary/PlayerWallCollisionRight"]
shape = SubResource("RectangleShape2D_01e36")

[node name="PlayerWallCollisionRight2" parent="PlayerBoundary" instance=ExtResource("6_2p6qj")]
position = Vector2(0, -221)
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBoundary/PlayerWallCollisionRight2"]
shape = SubResource("RectangleShape2D_01e36")

[node name="PlayerWallCollisionRight3" parent="PlayerBoundary" instance=ExtResource("6_2p6qj")]
position = Vector2(0, 34)
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBoundary/PlayerWallCollisionRight3"]
shape = SubResource("RectangleShape2D_01e36")
